--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^10.2.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
